Minor fixes - updated css for viewing on mobile - added local storage to continue game

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,7 @@
 
 #layout {
-    width: 812px;
-    height: 375px;
-    /* border: 2px solid gold; */
+    width: 100%;
+    height: 100vh;
 }
 
 /*//////////////////////////////////////////////////// PAGES ///////////////////////////////////////// */
@@ -11,7 +10,7 @@
     background-image: url('images/main_page.jpg');
     opacity: 0.7;
     background-repeat: no-repeat, repeat;
-    width: 100%;
+    /* width: 100%; */
     height: 100%;
     /* border: 2px solid black; */
     background-size: cover;
